--- a/live-timing/package.json
+++ b/live-timing/package.json
@@ -1,41 +1,32 @@
 {
+  "name": "live-timing",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
-    "build": "next build",
     "dev": "next dev",
-    "start": "next start"
+    "build": "next build",
+    "start": "next start",
+    "lint": "next lint"
   },
   "dependencies": {
-    "@heroicons/react": "^2.1.4",
     "@radix-ui/react-icons": "^1.3.0",
-    "@radix-ui/react-separator": "^1.1.0",
-    "@tailwindcss/forms": "^0.5.7",
-    "@vercel/postgres": "^0.8.0",
-    "autoprefixer": "10.4.19",
-    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
-    "next": "15.0.0-rc.0",
-    "next-auth": "5.0.0-beta.19",
-    "postcss": "8.4.38",
-    "react": "19.0.0-rc-f994737d14-20240522",
-    "react-dom": "19.0.0-rc-f994737d14-20240522",
+    "next": "14.2.4",
+    "react": "^18.3.1",
+    "react-dom": "^18",
     "react-use-websocket": "^4.8.1",
-    "tailwind": "^4.0.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss": "3.4.4",
-    "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.5.2",
-    "use-debounce": "^10.0.1",
-    "zod": "^3.23.8"
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@types/bcrypt": "^5.0.2",
-    "@types/node": "20.14.8",
-    "@types/react": "18.3.3",
-    "@types/react-dom": "18.3.0"
-  },
-  "engines": {
-    "node": ">=20.12.0"
+    "@types/node": "^20",
+    "@types/react": "^18.3.3",
+    "@types/react-dom": "^18",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.4",
+    "postcss": "^8",
+    "tailwindcss": "^3.4.1",
+    "typescript": "^5"
   }
 }
