--- a/live-timing/package.json
+++ b/live-timing/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "lucide-react": "^0.402.0",
     "next": "14.2.4",
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-use-websocket": "^4.8.1",
+    "socket.io-client": "^4.7.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7"
   },
