--- a/src/frontend/live-timing/.env
+++ b/src/frontend/live-timing/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb://admin:password@localhost:27017/db?authSource=admin"
+DATABASE_URL="mongodb+srv://admin:W_ows_yp_rn1@livetimingcluster.f9jbbph.mongodb.net/live_timing"
