--- a/src/frontend/live-timing/package.json
+++ b/src/frontend/live-timing/package.json
@@ -11,9 +11,13 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.5",
+    "@hookform/resolvers": "^3.9.0",
     "@prisma/client": "^5.16.1",
     "@radix-ui/react-alert-dialog": "^1.1.1",
     "@radix-ui/react-icons": "^1.3.0",
+    "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-select": "^2.1.1",
+    "@radix-ui/react-slider": "^1.2.0",
     "@radix-ui/react-slot": "^1.1.0",
     "@radix-ui/react-toast": "^1.2.1",
     "class-variance-authority": "^0.7.0",
@@ -21,13 +25,17 @@
     "lucide-react": "^0.402.0",
     "mongodb": "^6.8.0",
     "next": "14.2.4",
+    "next-themes": "^0.3.0",
     "prisma": "^5.16.2",
     "react": "^18.3.1",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.1",
     "react-use-websocket": "^4.8.1",
     "socket.io-client": "^4.7.5",
+    "sonner": "^1.5.0",
     "tailwind-merge": "^2.3.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
