refactor: Update MongoDB connection string in .env file and update @prisma/client dependency to version 5.17.0

--- a/src/frontend/live-timing/.env
+++ b/src/frontend/live-timing/.env
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://admin:W_ows_yp_rn1@livetimingcluster.f9jbbph.mongodb.net/live_timing"
+DATABASE_URL="mongodb+srv://admin:LOOLC8qxoJSaKkK7@livetimingcluster.f9jbbph.mongodb.net/live_timing
+"
