--- a/src/frontend/live-timing/package.json
+++ b/src/frontend/live-timing/package.json
@@ -31,6 +31,7 @@
     "react": "^18.3.1",
     "react-dom": "^18",
     "react-hook-form": "^7.52.1",
+    "react-icons": "^5.2.1",
     "react-use-websocket": "^4.8.1",
     "socket.io-client": "^4.7.5",
     "sonner": "^1.5.0",
